--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.0.1",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
